force-app/main/default/objects/Study_Plan__c/Study_Plan__c.object-meta.xml
<CustomObject>
    <description>Learning-lab custom object for the Salesforce Dev I & II RoadMap.</description>
    <label>Study Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>