force-app/main/default/objects/Study_Plan__c/fields/Certification_Target__c.field-meta.xml
<CustomField>
    <fullName>Certification_Target__c</fullName>
    <label>Certification Target</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Platform Developer I</fullName>
            </value>
            <value>
                <fullName>Platform Developer II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>