force-app/main/default/objects/Study_Plan__c/fields/Completed_Lessons__c.field-meta.xml
<CustomField>
    <fullName>Completed_Lessons__c</fullName>
    <label>Completed Lessons</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue></defaultValue>
</CustomField>