force-app/main/default/objects/Study_Plan__c/fields/Learner__c.field-meta.xml
<CustomField>
    <fullName>Learner__c</fullName>
    <label>Learner</label>
    <lookupFilter><active>false</active><booleanFilter></booleanFilter><filterItems><field>@RECORDTYPE</field><operation>equals</operation><value>Master Record Type</value></filterItems></lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Study Plans</relationshipLabel>
    <relationshipName>Study_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>