force-app/main/default/objects/Study_Plan__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <label>Progress</label>
    <type>Percent</type>
</CustomField>