force-app/main/default/objects/Study_Plan__c/fields/Quiz_Score__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Score__c</fullName>
    <label>Quiz Score</label>
    <type>Percent</type>
</CustomField>