force-app/main/default/objects/Study_Plan__c/fields/Weekly_Goal_Hours__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Goal_Hours__c</fullName>
    <label>Weekly Goal Hours</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
    <defaultValue></defaultValue>
</CustomField>