force-app/main/default/objects/Study_Plan__c/validationRules/Progress_Between_0_100.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Progress must be between 0 and 100.</description>
    <errorConditionFormula>Progress__c &lt; 0 || Progress__c &gt; 100</errorConditionFormula>
    <errorDisplayField>Progress__c</errorDisplayField>
    <errorMessage>Progress must be between 0 and 100.</errorMessage>
</ValidationRule>