force-app/main/default/objects/Study_Plan__c/validationRules/Quiz_Score_Between_0_100.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Quiz score must be between 0 and 100.</description>
    <errorConditionFormula>NOT(ISBLANK(Quiz_Score__c)) &amp;&amp; (Quiz_Score__c &lt; 0 || Quiz_Score__c &gt; 100)</errorConditionFormula>
    <errorDisplayField>Quiz_Score__c</errorDisplayField>
    <errorMessage>Quiz Score must be between 0 and 100.</errorMessage>
</ValidationRule>